deploy/files/academy-stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  AcademyVpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 10.0.0.0/16
  AcademySubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref AcademyVpc
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: AcademyStudentVm
    DependsOn:
      - AcademyRouteTable
  AcademyIgw:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
  AcademyVPCGwAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref AcademyVpc
      InternetGatewayId: !Ref AcademyIgw
  AcademyRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref AcademyVpc
  DefaultGwRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref AcademyRouteTable
      GatewayId: !Ref AcademyIgw
    DependsOn:
      - AcademyVPCGwAttachment
  AcademyVmSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref AcademyVpc
      GroupDescription: Allow access from HTTP and SSH traffic
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  AcademySubnetRouteTableAssoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref AcademyRouteTable
      SubnetId: !Ref AcademySubnet
Outputs:
  SubnetId:
    Description: Subnet ID
    Value: !Ref AcademySubnet
  VpcId:
    Description: VPC ID
    Value: !Ref AcademyVpc
  SecurityGroupId:
    Description: SG ID
    Value: !Ref AcademyVmSecurityGroup
